force-app/main/default/objects/ProjectServiceCertification__c/ProjectServiceCertification__c.object-meta.xml
<CustomObject>
    <description>Relates a Certification to a Project Service. Certifications from Retailer Service Certification are added by default when a Service is added to a Project Service. Additional Certifications can be added. Project Service Certification is related to Certification and Project Service.</description>
    <label>Project Service Certification</label>
    <nameField>
        <displayFormat>PSCERT-{000000000}</displayFormat>
        <label>Project Service Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>