force-app/main/default/objects/ProjectServiceCertification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Project Service Certifications</relationshipLabel>
    <relationshipName>Project_Service_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>