force-app/main/default/objects/ProjectServiceCertification__c/fields/CertificationName__c.field-meta.xml
<CustomField>
    <fullName>CertificationName__c</fullName>
    <formula>Certification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CertificationName</label>
    <type>Text</type>
</CustomField>